# mondo-synonym-sync

./: .gitignore  README.md  check_synonym_sync.py  pyproject.toml  qc_synonym_sync.py  synonym_sync_qc.py
.github/workflows/: qc.yaml  synonyms.yaml
src/ontology/: Makefile  mondo-edit.obo
src/ontology/tmp/: synonym-sync-report.md  synonym-sync-summary.md
src/scripts/: synonym_sync_qc.py
tests/: test_qc_synonym_sync.py  test_synonym_sync_qc.py
tests/fixtures/: modifier_changed.obo  non_synonym_changed.obo  original.obo  provenance_changed.obo  scope_and_modifier_changed.obo  scope_changed.obo  synonym_added.obo  synonym_deleted.obo
